@@ -2,6 +2,8 @@
 
 3.0.8 (unreleased)
 
+  - Support bytea column copying. [GSM]
+
   - Fix race condition in bucardo_delta/bucardo_track updates 
     for pushdelta syncs. [GSM]
 
